# normalize-path-except

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
