[package]
name = "normalize-path-except"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.2.0"
tower = { version = "0.5.2", features = ["util"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"

[dev-dependencies]
bytes = "1.10.0"
http-body-util = "0.1.2"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
