[package]
name = "normalize-path-except"
version = "0.2.1"
edition = "2024"
description = "NormalizePath from tower, but with exceptions, because it's hard to add them when you have to wrap your whole service in this middleware for axum."
authors = ["Tom Grushka"]
license = "MIT"
repository = "https://github.com/dra11y/normalize-path-except.git"
homepage = "https://github.com/dra11y/normalize-path-except"

[dependencies]
http = "1.2.0"
tower = { version = "0.5.2", features = ["util"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"

[dev-dependencies]
bytes = "1.10.0"
http-body-util = "0.1.2"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
